 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc1

 - [ZBX-3050] fixed that host can be named like an existant template and oterwise (KB)
 - [ZBX-3019] fixed templated graphs not being copied to discovered hosts in DM setup; thanks to Alexander Ignatyev (asaveljevs)
 - [ZBX-2860] fixed usergroup renaming (Vedmak)
 - [ZBX-3027] avg, delta, max, min, sum functions in popup_trexpr.php have a time shift input, so that this parameter now can be specified through GUI (KB)
 - [ZBX-2827] added checks when adding or updating maintenances, so that duplicate names could not be added (KB)
 - [ZBX-2978] fixed graphs import with Y axis set to an item (Vedmak)
 - [ZBX-2507] minimal graph dimension size is set to 20 pixels (Vedmak)
 - [ZBX-2665] web scenario steps on graphs now are in correct order (Vedmak)
 - [ZBX-2995] fixed crash in zbx_mem_realloc(), reduced memory usage and memory fragmentation in configuration cache (asaveljevs)
 - [ZBX-3024] in trigger expression selection popup, expressions are now filtered, depending on item type (KB)
 - [ZBX-3023] fixed repeated notifications after maintenance period (Sasha)
 - [ZBX-3017] fixed error when try to add dependency to template trigger that is linked to a host (Vedmak)
 - [ZBX-3008] fixed server generating multiple unknown events for triggers with multiple items (asaveljevs)
 - [ZBX-3011] passwords are no longer shown in HTML when editing media types (Vedmak)
 - [ZBXNEXT-510] sending of SMS messages through Ez Texting is now integrated into Zabbix (asaveljevs,Vedmak)
 - [ZBX-1425] option ALL is added to host group dropdown when adding or editing host group (KB)